feat: add service and app statistic for today's and yesterday's flow
